{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 186,
  "lineage": "811bde88-4d09-efaa-81eb-903014d95293",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959044923143:security-group/sg-07958a73b405460bd",
            "description": "EmrManagedMasterSecurityGroup",
            "egress": [],
            "id": "sg-07958a73b405460bd",
            "ingress": [],
            "name": "us-east-1-master-managed",
            "name_prefix": "",
            "owner_id": "959044923143",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "master-managed",
              "Environment": "us-east-1",
              "Name": "us-east-1-master-managed"
            },
            "tags_all": {
              "Attributes": "master-managed",
              "Environment": "us-east-1",
              "Name": "us-east-1-master-managed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea2a06f80131f80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959044923143:security-group/sg-0a2639e79f6c60954",
            "description": "EmrManagedSlaveSecurityGroup",
            "egress": [],
            "id": "sg-0a2639e79f6c60954",
            "ingress": [],
            "name": "us-east-1-slave-managed",
            "name_prefix": "",
            "owner_id": "959044923143",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "slave-managed",
              "Environment": "us-east-1",
              "Name": "us-east-1-slave-managed"
            },
            "tags_all": {
              "Attributes": "slave-managed",
              "Environment": "us-east-1",
              "Name": "us-east-1-slave-managed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea2a06f80131f80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959044923143:security-group/sg-0ea04a34f11db0024",
            "description": "Allow inbound traffic from Security Groups and CIDRs for masters. Allow all outbound traffic",
            "egress": [],
            "id": "sg-0ea04a34f11db0024",
            "ingress": [],
            "name": "us-east-1-master",
            "name_prefix": "",
            "owner_id": "959044923143",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "master",
              "Environment": "us-east-1",
              "Name": "us-east-1-master"
            },
            "tags_all": {
              "Attributes": "master",
              "Environment": "us-east-1",
              "Name": "us-east-1-master"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea2a06f80131f80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959044923143:security-group/sg-03ee4b37dab724b48",
            "description": "Allow inbound traffic from Security Groups and CIDRs for slaves. Allow all outbound traffic",
            "egress": [],
            "id": "sg-03ee4b37dab724b48",
            "ingress": [],
            "name": "us-east-1-slave",
            "name_prefix": "",
            "owner_id": "959044923143",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "slave",
              "Environment": "us-east-1",
              "Name": "us-east-1-slave"
            },
            "tags_all": {
              "Attributes": "slave",
              "Environment": "us-east-1",
              "Name": "us-east-1-slave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea2a06f80131f80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "managed_master_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2842650578",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07958a73b405460bd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.managed_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "managed_slave_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2460395630",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a2639e79f6c60954",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.managed_slave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-111932620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea04a34f11db0024",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "slave_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-194663958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ee4b37dab724b48",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.slave"
          ]
        }
      ]
    }
  ]
}